<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Status_Initialize" Id="{5fabe413-1c6c-4993-9bca-bf3bb5664c62}">
    <Declaration><![CDATA[TYPE ST_Status_Initialize :
STRUCT
	bFini	:BOOL;
	bBus	:BOOL;
	bErr	:BOOL;
	nErr	:UDINT;
	iItpState:	UDINT;
	iState: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>