<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Config_Main" Id="{71243de9-e680-41d3-abea-7b5fb3a2dead}">
    <Declaration><![CDATA[TYPE ST_Config_Main :
STRUCT
	
	stInterp			:ST_Config_Interpreter;
	stInit				:ST_Config_Initialize;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>