<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Intern_Main" Id="{c63190fd-75e0-4a6e-8191-8da2f51c365d}">
    <Declaration><![CDATA[TYPE ST_Intern_Main :
STRUCT
	count: INT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>