<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAIn_Main" Id="{477a1fd5-7977-4fdb-9714-a725af73d0df}">
    <Declaration><![CDATA[TYPE ST_PAIn_Main :
STRUCT
	(* stNcToPlc	:ST_NciChannelToPlc;  
	stNciIn		:ST_NCInterpreter_PAIn;*)

	stInit			:ST_PAIn_Initialize;
	stInterp		:ST_PAIn_Interpreter;
	stMBits			:ST_FastMFunc;
	stPAInDrops		:ST_PAIn_Drops;
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>