<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Status_Main" Id="{40c8abf6-f568-47c9-af57-a2c34ab30765}">
    <Declaration><![CDATA[TYPE ST_Status_Main :
STRUCT
	stInterp				:ST_Status_Interpreter;
	stInit					:ST_Status_Initialize;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>